--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "impactr-affiliate-app-beta",
+  "name": "replsports-api",
   "version": "1.0.0",
   "description": "",
   "main": "server.ts",
